--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/style.css">
-    <title>Chatbot con Flask</title>
+    <title>24LeMansbot</title>
 </head>
 
 <body>
     <div class="chat-container">
-        <h1>Chatbot con Flask</h1>
+        <h1><span class="titulo_h1">24LeMans</span>bot</h1>
         <div class="chat-messages" id="chatbox">
             <div class="message bot-message">¡Hola! Soy tu chatbot. ¿En qué puedo ayudarte?</div>
         </div>
