add: mas datos de respuesta

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -12,7 +12,7 @@
     <div class="chat-container">
         <h1><span class="titulo_h1">24LeMans</span>bot</h1>
         <div class="chat-messages" id="chatbox">
-            <div class="message bot-message">¡Hola! Soy tu chatbot. ¿En qué puedo ayudarte?</div>
+            <div class="message bot-message">¡Hola! Soy 24LeMansbot. ¿Qué deseas saber sobre la carrera?</div>
         </div>
         <div class="input-container">
             <input type="text" id="mensaje" placeholder="Escribe tu mensaje..." autocomplete="off">
