--- a/templates/chat.html
+++ b/templates/chat.html
@@ -19,14 +19,15 @@
         </div>
         <div class="input-container">
             <input type="text" id="mensaje" placeholder="Escribe tu mensaje..." autocomplete="off">
-            <button onclick="enviarMensaje()">Enviar</button>
+            <button onclick="enviarMensaje()" class="btn-send"><img src="../static/assets/send.svg" alt="send"
+                    width="32"></button>
         </div>
         <h4>Atajos:</h4>
         <div class="buttons-container">
-            <button class="btn-shortcut" data-message="categorias">#Categorias</button>
+            <button class="btn-shortcut" data-message="las categorias son">#Categorias</button>
             <button class="btn-shortcut" data-message="primer lugar">#Primer lugar</button>
-            <button class="btn-shortcut" data-message="marcas">#Marcas</button>
-            <button class="btn-shortcut" data-message="nos vemos">#Nos vemos</button>
+            <button class="btn-shortcut" data-message="marcas de autos">#Marcas</button>
+            <button class="btn-shortcut" data-message="quienes compiten">#Equipos</button>
         </div>
     </div>
 
