--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,31 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="icon" href="../static/assets/icon.svg" type="image/x-icon">
     <title>24LeMansbot</title>
 </head>
 
 <body>
     <div class="chat-container">
-        <h1><span class="titulo_h1">24LeMans</span>bot</h1>
+        <h1><span class="title-chat">24LeMans</span>bot</h1>
         <div class="chat-messages" id="chatbox">
             <div class="msg-box-bot">
                 <img src="../static/assets/robot.svg" alt="image" width="32" class="image bot-image">
-                <div class="message bot-message">¡Hola! Soy 24LeMansbot. ¿Qué deseas saber sobre la carrera?</div>
+                <div class="message bot-message">¡Hola! Soy 24LeMansbot. ¿Qué deseas saber sobre las 24 Horas de Le
+                    Mans?</div>
             </div>
+        </div>
+        <h4>Atajos:</h4>
+        <div class="buttons-container">
+            <button class="btn-shortcut" data-message="pole position">#Pole Position</button>
+            <button class="btn-shortcut" data-message="las categorias son">#Categorias</button>
+            <button class="btn-shortcut" data-message="quienes compiten">#Equipos</button>
+            <button class="btn-shortcut" data-message="marcas de autos">#Marcas</button>
+            <button class="btn-shortcut" data-message="lista de autos">#Autos</button>
         </div>
         <div class="input-container">
             <input type="text" id="mensaje" placeholder="Escribe tu mensaje..." autocomplete="off">
             <button onclick="enviarMensaje()" class="btn-send"><img src="../static/assets/send.svg" alt="send"
                     width="32"></button>
-        </div>
-        <h4>Atajos:</h4>
-        <div class="buttons-container">
-            <button class="btn-shortcut" data-message="las categorias son">#Categorias</button>
-            <button class="btn-shortcut" data-message="primer lugar">#Primer lugar</button>
-            <button class="btn-shortcut" data-message="marcas de autos">#Marcas</button>
-            <button class="btn-shortcut" data-message="quienes compiten">#Equipos</button>
         </div>
     </div>
 
